# yuru_engine

./: .gitignore  CMakeLists.txt  base.hpp  camera.cpp  camera.hpp  camera_2d.cpp  camera_2d.hpp  camera_creative.cpp  camera_creative.hpp  camera_flycam.cpp  camera_flycam.hpp  glad.c  main.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_opengl.cpp  shader_opengl.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp  window_opengl.cpp  window_opengl.hpp
lib/glad/: glad.h
shaders/: fragShader.frag  lightShader.frag  lightShader.vert  lightSource.frag  vertShader.vert
